tests/field/call_nonfunction_field.out
[31merror[error]: 'str' object is not callable
----- Traceback -----
  ┌─ <unknown>:6:9
  | 
6 | foo.bar()
  |          ^
[0m