tests/field/call_nonfunction_field.my
class Foo:

foo = Foo()
foo.bar = "not a function"

foo.bar()
